--- a/.hgrc
+++ b/.hgrc
@@ -1,2 +1,6 @@
+[ui]
+username = Dmitry Gladkov <dmitry.gladkov@gmail.com>
+verbose = True
+
 [hostfingerprints]
 bitbucket.org = 24:9c:45:8b:9c:aa:ba:55:4e:01:6d:58:ff:e4:28:7d:2a:14:ae:3b
