--- a/.gitconfig
+++ b/.gitconfig
@@ -5,44 +5,24 @@
 	editor = vim
 	excludesfile = ~/.gitignore
 	autocrlf = input
-	safecrlf = true
-	whitespace = trailing-space,space-before-tab,tab-in-indent
 [merge]
 	tool = vimdiff
 [alias]
+	cpick = cherry-pick
 	st = status
 	ci = commit
 	br = branch
 	co = checkout
 	df = diff
-        dfch = diff --check
+	dfch = diff --check
 	dfc = diff --cached
-        dfcch = diff --cached --check
+	dfcch = diff --cached --check
 	lol = log --graph --decorate --oneline --abbrev-commit
 	lola = log --graph --decorate --oneline --abbrev-commit --all
 	logp = log --date=short --pretty=format:'%h %ad | %s%d [%an]'
 	unstage = reset HEAD
 	type = cat-file -t
 	dump = cat-file -p
-        undopush = push -f origin HEAD^:master
-[help]
-	autocorrect = -1
-[color]
-	ui = true
-[branch "master"]
-	remote = origin
-	merge = refs/heads/master
-[url "git@github.com:"]
-	insteadOf = "gh:"
-	pushInsteadOf = "github:"
-	pushInsteadOf = "git://github.com/"
-[url "git://github.com/"]
-	insteadOf = "github:"
-[url "git@gist.github.com:"]
-	insteadOf = "gst:"
-	pushInsteadOf = "gist:"
-	pushInsteadOf = "git://gist.github.com/"
-[url "git://gist.github.com/"]
-	insteadOf = "gist:"
+	undopush = push -f origin HEAD^:master
 [push]
 	default = simple
